versioned_docs/version-23.2/reference/rpk/rpk-plugin/rpk-plugin.mdx
---
title: rpk plugin
rpk_version: (rev )
---

<head>
  <meta name="title" content="rpk plugin | Redpanda Docs" />
  <meta name="description" content="rpk plugin" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-plugin/" />
</head>

List, download, update, and remove `rpk` plugins.
Plugins augment `rpk` with new commands.

For a plugin to be used, it must be in `$HOME/.local/bin` or somewhere
discoverable by `rpk` in your `$PATH`. All plugins follow a defined naming scheme:

```bash
.rpk-|name|
.rpk.ac-|name|
```

All plugins are prefixed with either `.rpk-` or `.rpk.ac-.` When `rpk` starts up, it
searches all directories in your `$PATH` for any executable binary that begins
with either of those prefixes. For any binary it finds, `rpk` adds a command for
that name to the `rpk` command space itself.

No plugin name can shadow an existing `rpk` command, and only one plugin can
exist under a given name at once. Plugins are added to the `rpk` command space on
a first-seen basis. If you have two plugins `rpk-foo`, and the second is
discovered later on in the `$PATH` directories, then only the first will be used.
The second will be ignored.

Plugins that have an `.rpk.ac-` prefix indicate that they support the
`--help-autocomplete` flag. If `rpk` sees this, `rpk` will exec the plugin with that
flag when `rpk` starts up, and the plugin will return all commands it supports as
well as short and long help test for each command. `rpk` uses this return to
build a shadow command space within `rpk` itself so that it looks as if the
plugin exists within `rpk`. This is particularly useful if you enable
autocompletion.

The expected return for plugins from `--help-autocomplete` is an array of the
following:

```c
type pluginHelp struct {
Path string `json:"path,omitempty"`
Short string `json:"short,omitempty"`
Long string `json:"long,omitempty"`
Example string `json:"example,omitempty"`
Args []string `json:"args,omitempty"`
}
```

where `path` is an underscore delimited argument path to a command. For
example, `foo_bar_baz` corresponds to the command `rpk foo bar baz`.

## Usage

```bash
rpk plugin [command]
```

## Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong>Value</strong>
      </td>
      <td>
        <strong>Type</strong>
      </td>
      <td>
        <strong>Description</strong>
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td>Help for plugin.</td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda or rpk config file; default search paths are
        ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.
      </td>
    </tr>
    <tr>
      <td>-X, --config-opt</td>
      <td>stringArray</td>
      <td>
        Override rpk configuration settings; '-X help' for detail or '-X list'
        for terser detail.
      </td>
    </tr>
    <tr>
      <td>--profile</td>
      <td>string</td>
      <td>rpk profile to use.</td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>Enable verbose logging.</td>
    </tr>
  </tbody>
</table>
